--- a/mgr/.gitignore
+++ b/mgr/.gitignore
@@ -1,124 +1,3 @@
 ./bin
 ./obj
-/obj/Debug/.NETFramework,Version=v4.8.AssemblyAttributes.cs
-/bin/Debug/Antlr3.Runtime.dll
-/bin/Debug/Assembly-CSharp.dll
-/bin/Debug/Assembly-CSharp-firstpass.dll
-/bin/Debug/AstarPathfindingProject.dll
-/bin/Debug/BouncyCastle_GameSparks.dll
-/bin/Debug/com.rlabrecque.steamworks.net.dll
-/bin/Debug/enum2int.dll
-/bin/Debug/EOS.dll
-/bin/Debug/FidelityFX.FSR.dll
-/bin/Debug/GameSparks.Api.dll
-/bin/Debug/GameSparks.dll
-/bin/Debug/GameSparksRT.dll
-/bin/Debug/HBAO.Runtime.dll
-/bin/Debug/InControl.dll
-/bin/Debug/libnoise.dll
-/bin/Debug/LogLibrary.dll
-/bin/Debug/MemoryPack.dll
-/obj/Debug/mgr.csproj.AssemblyReference.cache
-/obj/Debug/mgr.csproj.CopyComplete
-/obj/Debug/mgr.csproj.CoreCompileInputs.cache
-/obj/Debug/mgr.csproj.FileListAbsolute.txt
-/bin/Debug/mgr.dll
-/obj/Debug/mgr.dll
-/bin/Debug/mgr.pdb
-/obj/Debug/mgr.pdb
-/bin/Debug/Mono.Security.dll
-/bin/Debug/mscorlib.dll
-/bin/Debug/NCalc.dll
-/bin/Debug/netstandard.dll
-/bin/Debug/Newtonsoft.Json.dll
-/bin/Debug/NGUI.dll
-/bin/Debug/Noemax.GZip.dll
-/bin/Debug/Pathfinding.ClipperLib.dll
-/bin/Debug/Pathfinding.Ionic.Zip.Reduced.dll
-/bin/Debug/Pathfinding.Poly2Tri.dll
-/bin/Debug/ScreenSpaceReflections.dll
-/bin/Debug/System.ComponentModel.Composition.dll
-/bin/Debug/System.Configuration.dll
-/bin/Debug/System.Data.DataSetExtensions.dll
-/bin/Debug/System.Drawing.dll
-/bin/Debug/System.IO.Compression.FileSystem.dll
-/bin/Debug/System.Net.Http.dll
-/bin/Debug/System.Numerics.dll
-/bin/Debug/System.Runtime.CompilerServices.Unsafe.dll
-/bin/Debug/System.Runtime.Serialization.dll
-/bin/Debug/System.Security.dll
-/bin/Debug/System.ServiceModel.Internals.dll
-/bin/Debug/System.Transactions.dll
-/bin/Debug/System.Xml.Linq.dll
-/bin/Debug/Unity.Addressables.dll
-/bin/Debug/Unity.Animation.Rigging.dll
-/bin/Debug/Unity.Burst.dll
-/bin/Debug/Unity.Burst.Unsafe.dll
-/bin/Debug/Unity.Collections.dll
-/bin/Debug/Unity.Collections.LowLevel.ILSupport.dll
-/bin/Debug/Unity.Mathematics.dll
-/bin/Debug/Unity.Postprocessing.Runtime.dll
-/bin/Debug/Unity.Profiling.Core.dll
-/bin/Debug/Unity.ResourceManager.dll
-/bin/Debug/Unity.TextMeshPro.dll
-/bin/Debug/UnityEngine.AccessibilityModule.dll
-/bin/Debug/UnityEngine.AIModule.dll
-/bin/Debug/UnityEngine.AndroidJNIModule.dll
-/bin/Debug/UnityEngine.AnimationModule.dll
-/bin/Debug/UnityEngine.AssetBundleModule.dll
-/bin/Debug/UnityEngine.AudioModule.dll
-/bin/Debug/UnityEngine.ClothModule.dll
-/bin/Debug/UnityEngine.ClusterInputModule.dll
-/bin/Debug/UnityEngine.ClusterRendererModule.dll
-/bin/Debug/UnityEngine.ContentLoadModule.dll
-/bin/Debug/UnityEngine.CoreModule.dll
-/bin/Debug/UnityEngine.CrashReportingModule.dll
-/bin/Debug/UnityEngine.DirectorModule.dll
-/bin/Debug/UnityEngine.dll
-/bin/Debug/UnityEngine.DSPGraphModule.dll
-/bin/Debug/UnityEngine.GameCenterModule.dll
-/bin/Debug/UnityEngine.GridModule.dll
-/bin/Debug/UnityEngine.ImageConversionModule.dll
-/bin/Debug/UnityEngine.IMGUIModule.dll
-/bin/Debug/UnityEngine.InputLegacyModule.dll
-/bin/Debug/UnityEngine.InputModule.dll
-/bin/Debug/UnityEngine.JSONSerializeModule.dll
-/bin/Debug/UnityEngine.LocalizationModule.dll
-/bin/Debug/UnityEngine.ParticleSystemModule.dll
-/bin/Debug/UnityEngine.PerformanceReportingModule.dll
-/bin/Debug/UnityEngine.Physics2DModule.dll
-/bin/Debug/UnityEngine.PhysicsModule.dll
-/bin/Debug/UnityEngine.PropertiesModule.dll
-/bin/Debug/UnityEngine.ScreenCaptureModule.dll
-/bin/Debug/UnityEngine.SharedInternalsModule.dll
-/bin/Debug/UnityEngine.SpriteMaskModule.dll
-/bin/Debug/UnityEngine.SpriteShapeModule.dll
-/bin/Debug/UnityEngine.StreamingModule.dll
-/bin/Debug/UnityEngine.SubsystemsModule.dll
-/bin/Debug/UnityEngine.TerrainModule.dll
-/bin/Debug/UnityEngine.TerrainPhysicsModule.dll
-/bin/Debug/UnityEngine.TextCoreFontEngineModule.dll
-/bin/Debug/UnityEngine.TextCoreTextEngineModule.dll
-/bin/Debug/UnityEngine.TextRenderingModule.dll
-/bin/Debug/UnityEngine.TilemapModule.dll
-/bin/Debug/UnityEngine.TLSModule.dll
-/bin/Debug/UnityEngine.UI.dll
-/bin/Debug/UnityEngine.UIElementsModule.dll
-/bin/Debug/UnityEngine.UIModule.dll
-/bin/Debug/UnityEngine.UnityAnalyticsCommonModule.dll
-/bin/Debug/UnityEngine.UnityAnalyticsModule.dll
-/bin/Debug/UnityEngine.UnityConnectModule.dll
-/bin/Debug/UnityEngine.UnityCurlModule.dll
-/bin/Debug/UnityEngine.UnityWebRequestAssetBundleModule.dll
-/bin/Debug/UnityEngine.UnityWebRequestAudioModule.dll
-/bin/Debug/UnityEngine.UnityWebRequestModule.dll
-/bin/Debug/UnityEngine.UnityWebRequestTextureModule.dll
-/bin/Debug/UnityEngine.UnityWebRequestWWWModule.dll
-/bin/Debug/UnityEngine.VehiclesModule.dll
-/bin/Debug/UnityEngine.VFXModule.dll
-/bin/Debug/UnityEngine.VideoModule.dll
-/bin/Debug/UnityEngine.VirtualTexturingModule.dll
-/bin/Debug/UnityEngine.VRModule.dll
-/bin/Debug/UnityEngine.WindModule.dll
-/bin/Debug/UnityEngine.XRModule.dll
-/bin/Debug/zxing.unity.dll
+/obj/Debug
